@@ -38,6 +38,7 @@ Release 0.19.0 - Unreleased
    HBASE-939   NPE in HStoreKey
    HBASE-945   Be consistent in use of qualified/unqualified mapfile paths
    HBASE-946   Row with 55k deletes timesout scanner lease
+   HBASE-950   HTable.commit no longer works with existing RowLocks though it's still in API
 
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
